// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > matches snapshot — default state 1`] = `
<div>
  <div
    class="relative flex flex-col gap-[7px] "
  >
    <div
      class="class-select h-controllg bg-grey rounded-xl border px-4 py-1.5 text-left cursor-pointer transition-all border-grey"
      tabindex="0"
    >
      <div
        class="font-display font-normal text-[11px] leading-[150%] text-dark-grey"
      >
        Choose option
      </div>
      <div
        class="font-display font-normal text-base leading-[150%] text-black"
      />
      <div
        class="absolute right-4 top-4"
      >
        <svg
          aria-hidden="true"
          class="ml-2 w-6 h-6 text-gray-800 transition-transform duration-300"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m19.5 8.25-7.5 7.5-7.5-7.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
    <div
      class="relative"
    />
    <div
      class="font-display text-left ml-4 text-dark-grey text-[12px] leading-[133%]"
    >
      Some helper text
    </div>
  </div>
</div>
`;

exports[`Select > matches snapshot — open dropdown 1`] = `
<div>
  <div
    class="relative flex flex-col gap-[7px] "
  >
    <div
      class="class-select h-controllg bg-grey rounded-xl border px-4 py-1.5 text-left cursor-pointer transition-all [box-shadow:0_0_0_1px_blue] border-blue"
      tabindex="0"
    >
      <div
        class="font-display font-normal text-[11px] leading-[150%] text-dark-grey"
      >
        Choose option
      </div>
      <div
        class="font-display font-normal text-base leading-[150%] text-black"
      />
      <div
        class="absolute right-4 top-4"
      >
        <svg
          aria-hidden="true"
          class="ml-2 w-6 h-6 text-gray-800 transition-transform duration-300 rotate-180"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m19.5 8.25-7.5 7.5-7.5-7.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
    <div
      class="relative"
    >
      <div
        class="py-1 px-2 border border-grey absolute z-[10] rounded-xl bg-white w-full"
      >
        <div
          class="cursor-pointer h-controlsm flex items-center px-2 transition duration-300 rounded-xl hover:bg-grey"
        >
          Option 1
        </div>
        <div
          class="cursor-pointer h-controlsm flex items-center px-2 transition duration-300 rounded-xl hover:bg-grey"
        >
          Option 2
        </div>
        <div
          class="cursor-pointer h-controlsm flex items-center px-2 transition duration-300 rounded-xl hover:bg-grey"
        >
          Option 3
        </div>
      </div>
    </div>
    <div
      class="font-display text-left ml-4 text-dark-grey text-[12px] leading-[133%]"
    >
      Some helper text
    </div>
  </div>
</div>
`;

exports[`Select > matches snapshot — selected option 1`] = `
<div>
  <div
    class="relative flex flex-col gap-[7px] "
  >
    <div
      class="class-select h-controllg bg-grey rounded-xl border px-4 py-1.5 text-left cursor-pointer transition-all border-grey"
      tabindex="0"
    >
      <div
        class="font-display font-normal text-[11px] leading-[150%] text-dark-grey"
      >
        Choose option
      </div>
      <div
        class="font-display font-normal text-base leading-[150%] text-black"
      >
        Option 2
      </div>
      <div
        class="absolute right-4 top-4"
      >
        <svg
          aria-hidden="true"
          class="ml-2 w-6 h-6 text-gray-800 transition-transform duration-300"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m19.5 8.25-7.5 7.5-7.5-7.5"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
    </div>
    <div
      class="relative"
    />
    <div
      class="font-display text-left ml-4 text-dark-grey text-[12px] leading-[133%]"
    >
      Some helper text
    </div>
  </div>
</div>
`;
